# pic-annotator

./: .gitignore  README.MD  config.yaml  main.py  pyproject.toml
